--- a/SPECULA_TutorialANDES.ipynb
+++ b/SPECULA_TutorialANDES.ipynb
@@ -246,7 +246,7 @@
       },
       "outputs": [],
       "source": [
-        "! python drive/MyDrive/HandsOnSPECULA/analyse_psf_data.py 20260212_135010"
+        "! python drive/MyDrive/HandsOnSPECULA/analyse_psf_data.py some_TN"
       ]
     }
   ],
